force-app/main/default/objects/Product_Bundle_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Products_Bundle</relationshipName>
    <type>Lookup</type>
</CustomField>