force-app/main/default/objects/Product_Bundle_Item__c/fields/Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Bundle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Product_Bundle</relationshipName>
    <type>Lookup</type>
</CustomField>