force-app/main/default/objects/Product_Bundle_Item__c/validationRules/Check_Default_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Default_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Default_Quantity__c == 0 || ISNULL(Default_Quantity__c) == TRUE, TRUE, FALSE )</errorConditionFormula>
    <errorDisplayField>Default_Quantity__c</errorDisplayField>
    <errorMessage>Please enter the Default Quantity.</errorMessage>
</ValidationRule>